# RaceGameProject

./: CMakeLists.txt  README.md
src/: Background.cpp  Biker.cpp  Button.cpp  Player.cpp  TextureHolder.cpp  Trap.cpp  main.cpp
src/include/: Background.h  Biker.h  Button.h  Player.h  TextureHolder.h  Trap.h
